--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
 
 before_install:
    - sudo apt-get update -qq
-   - sudo apt-get install -qq libhunspell-dev
+   - sudo apt-get install -qq hunspell libhunspell-dev
 
 # Boilerplate ... should be no reason to edit the install section
 install:
